--- a/buildout_simple.cfg
+++ b/buildout_simple.cfg
@@ -1,9 +1,23 @@
 [buildout]
 parts = python
+        django
 develop = .
 eggs = heydollar
+project_name = project
+versions = versions
+
+[versions]
+django = 1.4
 
 [python]
 recipe = zc.recipe.egg
 interpreter = python
+eggs = ${buildout:eggs}
+
+[django]
+recipe = djangorecipe
+project = ${buildout:project_name}
+projectegg = ${buildout:project_name}
+settings = settings.local
+wsgi = true
 eggs = ${buildout:eggs}
