Set up initial testing files

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,8 @@
 parts = python
         django
 develop = .
-eggs = heydollar
+eggs = django-nose
+        heydollar
         south
 project_name = project
 versions = versions
