Update bootstrap, add django-autofixture

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,14 +2,15 @@
 parts = python
         django
 develop = .
-eggs = django-nose
+eggs = django-autofixture
+        django-nose
         heydollar
         south
 project_name = project
 versions = versions
 
 [versions]
-django = 1.4
+django = 1.5
 
 [python]
 recipe = zc.recipe.egg
